# app/Http/Controllers/LeaveController.php
@@ -16,7 +16,7 @@ class LeaveController extends Controller
 {
 
     protected $responseRepository;
-    public function __construct(ResponseRepository $rp,)
+    public function __construct(ResponseRepository $rp)
     {
         //$this->middleware('auth:api', ['except' => []]);
         $this->responseRepository = $rp;
@@ -40,29 +40,30 @@ class LeaveController extends Controller
     {
 
         try {
-            // Retrieve leave types with status 1
-            $leaveTypes = LeaveType::select('id', 'employee_id', 'leave_type', 'days', 'status')
-                ->where('status', 1)
+            $employeeLeaveApplicationArrays = [];
+
+            $takenLeaves = Leave::where('status', 1)
+                ->groupBy('employee_id', 'leave_type')
+                ->select('employee_id', 'leave_type', DB::raw('sum(day) as total_days'))
                 ->get();
 
-            // Retrieve taken leaves for employee with ID 1
-            $takenLeaves = Leave::where('employee_id', 1)
-                ->where('status', 1)
-                ->groupBy('leave_type')
-                ->select('leave_type', DB::raw('sum(day) as total_days'))
-                ->get();
-
-            // Create an associative array to store the total days taken for each leave type
-            $takenLeavesArray = [];
             foreach ($takenLeaves as $takenLeave) {
+                $employeeId = $takenLeave->employee_id;
                 $leaveType = $takenLeave->leave_type;
                 $totalDays = $takenLeave->total_days;
-                $takenLeavesArray[$leaveType] = $totalDays;
+
+
+                if (!isset($employeeLeaveApplicationArrays[$employeeId])) {
+                    $employeeLeaveApplicationArrays[$employeeId] = [];
+                }
+
+
+                $employeeLeaveApplicationArrays[$employeeId][$leaveType] = $totalDays;
             }
-            // dd($takenLeavesArray);
+
+            // dd($employeeLeaveApplicationArrays);
             // exit;
 
-            // Retrieve leave setup information and calculate remaining days
             $getLeaveSetup = Leave::leftJoin('leave_types', 'leaves.leave_type', '=', 'leave_types.id')
                 ->select(
                     'leave_types.days',
@@ -72,27 +73,27 @@ class LeaveController extends Controller
                     'leaves.from_date',
                     'leaves.to_date',
                     'leaves.day',
+                    'leaves.employee_id',
+                    'leaves.status',
                 )->get();
 
-            // Create an array to store combined data
-            $combinedData = [];
+            $employeeLeaveArrays = [];
 
-            // Iterate through each leave setup and calculate remaining days
             foreach ($getLeaveSetup as $leaveSetup) {
                 $leaveTypeId = $leaveSetup->leave_type;
                 $availableDays = $leaveSetup->days;
+                $employeeId = $leaveSetup->employee_id;
 
-                // Check if the leave type exists in $takenLeavesArray
-                if (array_key_exists($leaveTypeId, $takenLeavesArray)) {
-                    // Subtract the days taken from the available days
-                    $remainingDays = $availableDays - $takenLeavesArray[$leaveTypeId];
+                if (array_key_exists($employeeId, $employeeLeaveApplicationArrays) && array_key_exists($leaveTypeId, $employeeLeaveApplicationArrays[$employeeId])) {
+
+                    $daysTaken = $employeeLeaveApplicationArrays[$employeeId][$leaveTypeId];
+                    $remainingDays = $availableDays - $daysTaken;
                 } else {
-                    // If the leave type has not been taken, available days are unchanged
+
                     $remainingDays = $availableDays;
                 }
 
-                // Add the combined data to the array
-                $combinedData[] = [
+                $employeeLeaveArrays[] = [
                     'leave_type_name' => $leaveSetup->leave_type_name,
                     'remaining_days' => $remainingDays,
                     'created_at' => $leaveSetup->created_at,
@@ -100,10 +101,10 @@ class LeaveController extends Controller
                     'from_date' => $leaveSetup->from_date,
                     'to_date' => $leaveSetup->to_date,
                     'day' => $leaveSetup->day,
+                    'employee_id' => $leaveSetup->employee_id,
+                    'status' => $leaveSetup->status,
                 ];
             }
-
-            // Now, $combinedData contains both leave setup information and the corresponding remaining days.
             // dd($combinedData);
             // exit;
 
@@ -111,27 +112,18 @@ class LeaveController extends Controller
 
             return response()->json([
                 'status' => 'success',
-                'list' => $combinedData,
+                'list' => $employeeLeaveArrays,
 
-            ]);
+            ], 201);
         } catch (\Exception $e) {
             return response()->json([
                 'status' => 'error',
                 'message' => $e->getMessage(),
-            ], 401);
+            ], 500);
         }
     }
 
-    // public function availableLeaves()
-    // {
 
-    //     $LeaveTypes = LeaveType::select('id', 'employee_id', 'leave_type', 'days', 'status')->where('status', 1)->get();
-
-    //     $takenLeavesArray = Leave::where('employee_id', '=', '1')->where('status', 1)
-    //         ->groupBy('type')
-    //         ->select('type', DB::raw('sum(days) as total_days'))
-    //         ->pluck('total_days', 'type')->toArray();
-    // }
 
     /**
      * @OA\Post(
